k8s/fibonacci-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibonacci
spec:
  replicas: 1
  selector:
    matchLabels:
      component: fibonacci
  template:
    metadata:
      labels:
        component: fibonacci
    spec:
      containers:
        - name: fibonacci
          image: makarovvv/fibonacci
          ports:
            - containerPort: 6000
