k8s/gateway-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: gateway
  template:
    metadata:
      labels:
        component: gateway
    spec:
      containers:
        - name: gateway
          image: makarovvv/gateway
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: gateway
  ports:
    - port: 3000
      targetPort: 3000
